# ActionLists

./: CMakeLists.txt  README.md
Actions/: Action.hpp  ActionSets.hpp  BasicActions.hpp  CMakeFiles.cmake  CMakeLists.txt
CMake/: CommonCompileOptions.cmake  GenerateVS2019.cmd  Precompiled.cmake
Tests/: CMakeFiles.cmake  CMakeLists.txt  JsonSerializers.cpp  JsonSerializers.hpp  main.cpp
Tests/Data/: Actions.json
Tests/RapidJson/: CMakeFiles.cmake  CMakeLists.txt
